traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:8: error: Unmatched closing brace '}' ignored here
                                 }
                                 ^